# bb8-failsafe

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: release-plz.yaml  rust.yml
src/: lib.rs
