[package]
name = "bb8-failsafe"
version = "0.1.2"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "thin wapper of failsafe-rs to provide circuit breaker captilites to bb8"
repository = "https://github.com/jobs62/bb8-failsafe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
failsafe = "1.1"
bb8 = "0.8"

[dev-dependencies]
tokio = { version = "1", features=["rt", "rt-multi-thread"] }
