[package]
name = "bb8-failsafe"
version = "0.1.20"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "thin wapper of failsafe-rs to provide circuit breaker captilites to bb8"
repository = "https://github.com/jobs62/bb8-failsafe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failsafe = "1.3"
bb8 = "0.9"

[dev-dependencies]
tokio = { version = "1", features=["rt", "rt-multi-thread"] }
